--- a/Language/en.json
+++ b/Language/en.json
@@ -139,6 +139,7 @@
         "tools": {
             "label": "Tools",
             "armory": "⚔️ Armory",
+            "armor_resists": "🛡️ Armor Resistances",
             "backup": "Backup"
         },
         "view": {
@@ -1435,5 +1436,22 @@
         "update_available": "🎉 Update available!",
         "up_to_date": "✅ Up to date",
         "error": "⚠️ Check failed"
+    },
+    "armor_resists": {
+        "dialog": {
+            "title": "🛡️ Armor Resistances"
+        },
+        "realm_label": "Select Realm:",
+        "realm": {
+            "albion": "Albion",
+            "midgard": "Midgard",
+            "hibernia": "Hibernia"
+        }
+    },
+    "common": {
+        "close_button": "Close"
+    },
+    "error": {
+        "data_load_failed": "Error loading data"
     }
 }
